--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "threejs-starter",
+  "name": "three-holo",
+  "homepage": "https://shaaaaawn.github.io/three-holo",
   "version": "1.3.0",
   "main": "src/index.js",
   "author": "Francesco Michelini <hello@francescomichelini.com>",
   "license": "MIT",
   "scripts": {
     "dev": "rm -rf dist && parcel ./src/index.html",
-    "build": "rm -rf dist && parcel build ./src/index.html --no-source-maps"
+    "build": "rm -rf dist && parcel build ./src/index.html --no-source-maps",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
+    "gh-pages": "^4.0.0",
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.2",
     "parcel-bundler": "^1.12.5",
