--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "three-holo",
-  "homepage": "https://shaaaaawn.github.io/three-holo",
+  "homepage": "https://shaaaaawn.github.io/three-holo/",
   "version": "1.3.0",
   "main": "src/index.js",
-  "author": "Francesco Michelini <hello@francescomichelini.com>",
   "license": "MIT",
   "scripts": {
     "dev": "rm -rf dist && parcel ./src/index.html",
